--- a/WebProject/views/home.ejs
+++ b/WebProject/views/home.ejs
@@ -1,6 +1,7 @@
 <%- include ./partials/header.ejs %>
 <%- include ./partials/main_nav.ejs %>
    <article>
+    <!--Main article content-->
         <h1>Welcome to my Portfolio!</h1>
         <p> I am D'Alo Farrington and this page has been made to showcase my projects.</p>
         <figure>
