--- a/WebProject/views/partials/footer.ejs
+++ b/WebProject/views/partials/footer.ejs
@@ -1,3 +1,4 @@
+<!--Fixed footer from bootstrap-->
 <footer>
       <nav class="navbar fixed-bottom navbar-dark bg-dark ">
         <h6 class ="navbar-text">&copy; Copyright 2025. All rights reserved.</h6>
