--- a/WebProject/views/partials/main_nav.ejs
+++ b/WebProject/views/partials/main_nav.ejs
@@ -1,4 +1,5 @@
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+ <!--Navigation to the different pages-->
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">D'Alo's Portfolio</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
