--- a/WebProject/views/about.ejs
+++ b/WebProject/views/about.ejs
@@ -4,7 +4,7 @@
         <h1>About Me</h1>
 
         <!-- Profile Picture -->
-        <img src="/images/iconpic.jpeg" alt="Profile Picture" border-radius="50%" width="100px" height="auto">
+        <img src="/images/iconpic.jpeg" alt="Profile Picture" class="image2">
 
         <!-- Short introduction -->
         <section>
