--- a/WebProject/views/home.ejs
+++ b/WebProject/views/home.ejs
@@ -5,7 +5,7 @@
         <h1>Welcome to my Portfolio!</h1>
         <p> I am D'Alo Farrington and this page has been made to showcase my projects.</p>
         <figure>
-            <img src="/images/lunapic.jpeg" alt="Dog picture" width="550px" height="auto">
+            <img src="/images/lunapic.jpeg" alt="Dog picture" class="image1">
             <figcaption>
                 <p>This is my dog Luna!</p>
             </figcaption>
